--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api-gateway
 server.port=8080
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://discovery-service:8761/eureka/
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
@@ -15,7 +15,7 @@ management.metrics.export.prometheus.enabled=true
 management.endpoint.health.show-details=always
 
 # JWT Auth
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9001
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-server:9001
 
 # --- User Auth Service ---
 resilience4j.circuitbreaker.instances.userAuthCB.sliding-window-size=10
@@ -54,4 +54,4 @@ resilience4j.circuitbreaker.instances.authServerCB.automatic-transition-from-ope
 
 management.tracing.enabled=true
 management.tracing.sampling.probability=1
-management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
