--- a/auth-server/src/main/resources/application.properties
+++ b/auth-server/src/main/resources/application.properties
@@ -1,14 +1,9 @@
 server.port=9001
 spring.application.name=auth-server
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore_auth_db
-spring.datasource.username=postgres
-spring.datasource.password=admin123
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.hostname=localhost
-user-service.base-url=http://localhost:8081
+eureka.client.service-url.defaultZone=http://discovery-service:8761/eureka
+eureka.instance.hostname=auth-server
+user-service.base-url=http://user-service:8081
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.security.oauth2=DEBUG
@@ -17,12 +12,12 @@ logging.level.com.nirmalks.bookstore.auth_server=DEBUG
 logging.level.org.springframework.web.reactive.function.client=DEBUG
 logging.level.org.springframework.security.authentication=DEBUG
 
-auth-server.base-url=http://localhost:${server.port}
+auth-server.base-url=http://auth-server:${server.port}
 auth-server.token-uri=${auth-server.base-url}/api/oauth2/token
 
 management.tracing.enabled=true
 management.tracing.sampling.probability=1
-management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 logging.pattern.correlation=[${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 logging.include-application-name=false
 
