--- a/checkout-service/src/main/resources/application.properties
+++ b/checkout-service/src/main/resources/application.properties
@@ -1,25 +1,25 @@
 spring.application.name=checkout-service
 server.port=8083
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore_checkout_service_db?stringtype=unspecified
+spring.datasource.url=jdbc:postgresql://checkout-db:5432/bookstore_checkout_service_db?stringtype=unspecified
 spring.datasource.username=postgres
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://discovery-service:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-eureka.instance.hostname=localhost
+eureka.instance.hostname=checkout-service
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 
-user-service.base-url=http://localhost:8081
-catalog-service.base-url=http://localhost:8082
+user-service.base-url=http://user-service:8081
+catalog-service.base-url=http://catalog-service:8082
 
 management.tracing.enabled=true
 management.tracing.sampling.probability=1
-management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 logging.pattern.correlation=[${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 logging.include-application-name=false
 
