--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
         <module>checkout-service</module>
         <module>user-service</module>
         <module>shared-utils</module>
+        <module>discovery-service</module>
+        <module>api-gateway</module>
+        <module>auth-server</module>
     </modules>
     <dependencyManagement>
         <dependencies>
