--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,12 @@ services:
     container_name: discovery-service
     ports:
       - "8761:8761"
-
+    healthcheck:
+      test: ["CMD-SHELL", "wget -T 5 -qO- http://localhost:8761/actuator/health | grep UP || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
   config-server:
     build:
       context: .
@@ -69,13 +74,13 @@ services:
       - "8888:8888"
     depends_on:
       discovery-service:
-        condition: service_started
+        condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8888/actuator/health || exit 1"]
+      test: ["CMD-SHELL", "wget -T 5 -qO- http://localhost:8888/actuator/health || exit 1"]
       interval: 5s
       timeout: 3s
       retries: 10
-      start_period: 30s
+      start_period: 15s
   api-gateway:
     build:
       context: .
@@ -85,9 +90,13 @@ services:
       - "8080:8080"
     depends_on:
       discovery-service:
-        condition: service_started
+        condition: service_healthy
       config-server:
-        condition: service_started
+        condition: service_healthy
+      auth-server:
+        condition: service_healthy
+      user-service:
+        condition: service_healthy
   auth-server:
     build:
       context: .
@@ -97,16 +106,21 @@ services:
       - "9001:9001"
     depends_on:
       discovery-service:
-        condition: service_started
+        condition: service_healthy
       user-db:
         condition: service_healthy
       config-server:
-        condition: service_started
+        condition: service_healthy
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://user-db:5432/bookstore_user_service_db
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=admin123
-
+    healthcheck:
+      test: ["CMD-SHELL", "wget -T 5 -qO- http://localhost:9001/actuator/health || exit 1"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+      start_period: 15s
   catalog-service:
     build:
       context: .
@@ -116,11 +130,11 @@ services:
       - "8082:8082"
     depends_on:
       discovery-service:
-        condition: service_started
+        condition: service_healthy
       catalog-db:
         condition: service_healthy
       config-server:
-        condition: service_started
+        condition: service_healthy
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://catalog-db:5432/bookstore_catalog_service_db
       - SPRING_DATASOURCE_USERNAME=postgres
@@ -135,11 +149,17 @@ services:
       - "8081:8081"
     depends_on:
       discovery-service:
-        condition: service_started
+        condition: service_healthy
       user-db:
         condition: service_healthy
       config-server:
-        condition: service_started
+        condition: service_healthy
+    healthcheck:
+      test: [ "CMD-SHELL", "wget -T 5 -qO- http://localhost:8081/actuator/health || exit 1" ]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+      start_period: 15s
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://user-db:5432/bookstore_user_service_db
       - SPRING_DATASOURCE_USERNAME=postgres
@@ -154,11 +174,11 @@ services:
       - "8083:8083"
     depends_on:
       discovery-service:
-        condition: service_started
+        condition: service_healthy
       checkout-db:
         condition: service_healthy
       config-server:
-        condition: service_started
+        condition: service_healthy
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://checkout-db:5432/bookstore_checkout_service_db
       - SPRING_DATASOURCE_USERNAME=postgres
@@ -172,7 +192,7 @@ services:
       - "9411:9411"
     depends_on:
       discovery-service:
-        condition: service_started
+        condition: service_healthy
 
   prometheus:
     image: prom/prometheus
